--- a/client/my-new-app/src/components/post/post.css
+++ b/client/my-new-app/src/components/post/post.css
@@ -59,6 +59,7 @@ box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
     padding: 30px;
     width: 700px;
     height: 700px;
+    border-radius: 10px;
 
 
 }
