--- a/client/my-new-app/src/components/rightbar/right.css
+++ b/client/my-new-app/src/components/rightbar/right.css
@@ -61,8 +61,8 @@
 }
 
 .rightbarProfileImg {
-   width: 40px;
-   height: 40px;
+   width: 50px;
+   height: 50px;
    border-radius: 50%;
    object-fit: cover;
 }
@@ -86,11 +86,19 @@
     font-weight: 500;
 }
 
+
+.rightbarFollowingName{
+    font-size: 20px;
+   
+   margin-left: 20px;
+    color: white;
+}
 .rightbarFollowingImg {
-    height: 100px;
-    width: 100px;
+    height: 40px;
+    width: 40px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 50%;
+    margin-top: 10px;
 }
 
 .rightbarInfo {
@@ -111,9 +119,16 @@
 
 .rightbarFollowing {
     display: flex;
-    flex-direction: column;
     margin-bottom: 20px;
     cursor: pointer;
+}
+
+.friends {
+    border-radius: 10px;
+    width: 250px;
+    height: 60px;
+    margin-left: 10px;
+   background: linear-gradient(to right, #d62976, #962fbf, #4f5bd5);
 }
 
 .rightbarInfoValue {
@@ -128,7 +143,7 @@
     margin-top: 30px;
     margin-bottom: 10px;
     border: none;
-    background-color: teal ;
+    background: linear-gradient(to right, #d62976, #962fbf, #4f5bd5);
     color: white;
     border-radius: 5px;
     padding: 5px 10px;
