--- a/client/my-new-app/src/components/share/share.css
+++ b/client/my-new-app/src/components/share/share.css
@@ -4,7 +4,9 @@
     border-radius: 10px;
     -webkit-box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38); 
 box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
-     margin-top: 70px;
+     margin-top: 90px;
+   
+    
 
 }
 
@@ -78,7 +80,7 @@ box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
     border:none;
     padding: 7px;
     border-radius: 5px;
-    background-color: green;
+    background: linear-gradient(to right, #d62976, #962fbf, #4f5bd5);
     font-weight:500;
     margin-right:20px;
     cursor: pointer;
@@ -102,4 +104,5 @@ box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
     right: 20px;
     cursor: pointer;
     opacity: 0.7;
-  }  
+
+  }
