--- a/client/my-new-app/src/pages/messenger/messenger.css
+++ b/client/my-new-app/src/pages/messenger/messenger.css
@@ -7,19 +7,14 @@
 
 .chatMenu{
     flex: 3.5;
-     
    
 }
 
 .chatMenuInput {
-    margin-top: 30px;
     width: 90%;
     padding: 10px 0;
-     background-color: #cfa9ba;
+    border-bottom: 2px solid rgb(128, 128, 128);
     border: none;
-    border-radius: 20px;
-    color:black;
-
 }
 
 
@@ -58,7 +53,7 @@
     height: 40px;
     border-radius: 5px;
     border: none;
-    background: linear-gradient(to right,  #d62976, #962fbf, #4f5bd5); 
+    background-color: teal;
     color: aliceblue;
 }
 
