--- a/client/my-new-app/src/components/share/share.css
+++ b/client/my-new-app/src/components/share/share.css
@@ -4,9 +4,7 @@
     border-radius: 10px;
     -webkit-box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38); 
 box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
-     margin-top: 90px;
-   
-    
+     margin-top: 70px;
 
 }
 
@@ -80,7 +78,7 @@ box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
     border:none;
     padding: 7px;
     border-radius: 5px;
-    background: linear-gradient(to right, #d62976, #962fbf, #4f5bd5);
+    background-color: green;
     font-weight:500;
     margin-right:20px;
     cursor: pointer;
@@ -104,5 +102,4 @@ box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.38);
     right: 20px;
     cursor: pointer;
     opacity: 0.7;
-
-  }
+  }  
